--- a/.github/workflows/test-automation.yml
+++ b/.github/workflows/test-automation.yml
@@ -6,28 +6,43 @@ on:
       - main
       - dev
     paths:
-      - 'tests/e2e-test/**'
+      - "tests/e2e-test/**"
   schedule:
-      - cron: '0 13 * * *'  # Runs at 1 PM UTC
+    - cron: "0 13 * * *" # Runs at 1 PM UTC
   workflow_dispatch:
 
+  workflow_call:
+    inputs:
+      MACAE_WEB_URL:
+        required: false
+        type: string
+        description: "Web URL for MACAE (overrides environment variable)"
+      MACAE_URL_API:
+        required: false
+        type: string
+        description: "API URL for MACAE (overrides environment variable)"
+    secrets:
+      EMAILNOTIFICATION_LOGICAPP_URL_TA:
+        required: false
+        description: "Logic App URL for email notifications"
+
 env:
-    url: ${{ vars.MACAE_WEB_URL }}
-    api_url: ${{ vars.MACAE_API_URL }}
-    accelerator_name: "MACAE"
+  # Use input URL if provided (from deploy pipeline), otherwise fall back to vars
+  url: ${{ inputs.MACAE_WEB_URL  }}
+  api_url: ${{ inputs.MACAE_URL_API}}
+  accelerator_name: "MACAE"
 
 jobs:
   test:
-
     runs-on: ubuntu-latest
-    steps:      
+    steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.13'
+          python-version: "3.13"
 
       - name: Azure CLI Login
         uses: azure/login@v2
@@ -38,7 +53,7 @@ jobs:
         id: start-container-app
         uses: azure/cli@v2
         with:
-          azcliversion: 'latest'
+          azcliversion: "latest"
           inlineScript: |
             az rest -m post -u "/subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/${{ vars.MACAE_RG }}/providers/Microsoft.App/containerApps/${{ vars.MACAE_BACKEND_CONTAINER_NAME }}/start?api-version=2025-01-01"
 
@@ -49,6 +64,40 @@ jobs:
 
       - name: Ensure browsers are installed
         run: python -m playwright install --with-deps chromium
+
+      - name: Validate URL
+        run: |
+          if [ -z "${{ env.url }}" ]; then
+            echo "ERROR: No URL provided for testing"
+            exit 1
+          elif [ -z "${{ env.api_url }}" ]; then
+            echo "ERROR: No API URL provided for testing"
+            exit 1
+          fi
+          echo "Testing URL: ${{ env.url }}"
+          echo "Testing API URL: ${{ env.api_url }}"
+      - name: Wait for Application to be Ready
+        run: |
+          echo "Waiting for application to be ready at ${{ env.url }} "
+          max_attempts=10
+          attempt=1
+
+          while [ $attempt -le $max_attempts ]; do
+            echo "Attempt $attempt: Checking if application is ready..."
+            if curl -f -s "${{ env.url }}" > /dev/null; then
+              echo "Application is ready!"
+              break
+            fi
+            
+            if [ $attempt -eq $max_attempts ]; then
+              echo "Application is not ready after $max_attempts attempts"
+              exit 1
+            fi
+            
+            echo "Application not ready, waiting 30 seconds..."
+            sleep 30
+            attempt=$((attempt + 1))
+          done
 
       - name: Run tests(1)
         id: test1
@@ -87,15 +136,27 @@ jobs:
         uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
-          name: test-report
+          name: test-report-${{ github.run_id }}
           path: tests/e2e-test/report/*
+      - name: Determine Test Result
+        id: test_result
+        run: |
+          IS_SUCCESS=${{ steps.test1.outcome == 'success' || steps.test2.outcome == 'success' || steps.test3.outcome == 'success' }}
+          echo "IS_SUCCESS=$IS_SUCCESS" >> $GITHUB_OUTPUT
+
+          if [ "$IS_SUCCESS" = "true" ]; then
+            echo "✅ Tests passed!"
+          else
+            echo "❌ All test attempts failed"
+            exit 1
+          fi
 
       - name: Send Notification
         if: always()
         run: |
           RUN_URL="https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
           REPORT_URL=${{ steps.upload_report.outputs.artifact-url }}
-          IS_SUCCESS=${{ steps.test1.outcome == 'success' || steps.test2.outcome == 'success' || steps.test3.outcome == 'success' }}
+          IS_SUCCESS=${{ steps.test_result.outputs.IS_SUCCESS }}
           # Construct the email body
           if [ "$IS_SUCCESS" = "true" ]; then
             EMAIL_BODY=$(cat <<EOF
@@ -124,7 +185,7 @@ jobs:
         if: always()
         uses: azure/cli@v2
         with:
-          azcliversion: 'latest'
+          azcliversion: "latest"
           inlineScript: |
             az rest -m post -u "/subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/${{ vars.MACAE_RG }}/providers/Microsoft.App/containerApps/${{ vars.MACAE_BACKEND_CONTAINER_NAME }}/stop?api-version=2025-01-01"
             az logout
