--- a/.github/workflows/deploy-waf.yml
+++ b/.github/workflows/deploy-waf.yml
@@ -134,7 +134,7 @@ jobs:
             --template-file infra/main.bicep \
             --parameters infra/main.waf-aligned.bicepparam \
             --parameters \
-                environmentName=${{env.SOLUTION_PREFIX}} \
+                solutionPrefix=${{env.SOLUTION_PREFIX}} \
                 solutionLocation="swedencentral" \
                 azureOpenAILocation="swedencentral" \
                 modelDeploymentType="GlobalStandard" \
