--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,7 @@ jobs:
       WEBAPP_URL: ${{ steps.get_output.outputs.WEBAPP_URL }}
       DEPLOYMENT_SUCCESS: ${{ steps.deployment_status.outputs.SUCCESS }}
       API_APP_URL: ${{ steps.get_output.outputs.API_APP_URL }}
+      CONTAINER_APP: ${{steps.get_backend_url.outputs.CONTAINER_APP}}
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -141,8 +142,7 @@ jobs:
                 gptModelName="gpt-4o" \
                 gptModelVersion="2024-08-06" \
                 imageTag="${IMAGE_TAG}" \
-              --output json \
-              --debug
+              --output json
 
       - name: Extract Web App and API App URLs
         id: get_output # <-- Add this
@@ -162,6 +162,35 @@ jobs:
               echo "API_APP_URL=$API_APP_URL"
             fi
           done
+
+      - name: Get Container App Backend URL
+        id: get_backend_url
+        run: |
+          set -e
+          echo "Fetching backend Container App URL from resource group: ${{ env.RESOURCE_GROUP_NAME }}"
+
+          CONTAINER_APP_NAME=$(az containerapp list \
+          --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
+          --query "[0].name" -o tsv)
+
+          if [ -z "$CONTAINER_APP_NAME" ]; then
+          echo "❌ No container app found in resource group."
+          exit 1
+          fi
+
+
+          CONTAINER_APP_URL=$(az containerapp show \
+          --name "$CONTAINER_APP_NAME" \
+          --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
+          --query "properties.configuration.ingress.fqdn" -o tsv)
+
+          if [ -z "$CONTAINER_APP_URL" ]; then
+          echo "❌ Failed to retrieve the backend container app URL."
+          exit 1
+          fi
+
+          echo "✅ Backend Container App URL: https://${CONTAINER_APP_URL}"
+          echo "BACKEND_API_URL=https://${CONTAINER_APP_URL}" >> $GITHUB_ENV
 
       - name: Extract AI Services and Key Vault Names
         if: always()
@@ -202,6 +231,7 @@ jobs:
     with:
       MACAE_WEB_URL: ${{ needs.deploy.outputs.WEBAPP_URL }}
       MACAE_URL_API: ${{ needs.deploy.outputs.API_APP_URL }}
+      MACAE_CONTAINER_APP: ${{needs.deploy.outputs.CONTAINER_APP}}
 
     secrets: inherit
   cleanup-deployment:
