--- a/.github/workflows/test-automation.yml
+++ b/.github/workflows/test-automation.yml
@@ -22,6 +22,9 @@ on:
         required: false
         type: string
         description: "API URL for MACAE (overrides environment variable)"
+      MACAE_CONTAINER_APP:
+        required: false
+        type: string
     secrets:
       EMAILNOTIFICATION_LOGICAPP_URL_TA:
         required: false
