--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -231,6 +231,7 @@ jobs:
     with:
       MACAE_WEB_URL: ${{ needs.deploy.outputs.WEBAPP_URL }}
       MACAE_URL_API: ${{ needs.deploy.outputs.API_APP_URL }}
+      MACAE_RG: ${{needs.deploy.outputs.RESOURCE_GROUP_NAME}}
       MACAE_CONTAINER_APP: ${{needs.deploy.outputs.CONTAINER_APP}}
 
     secrets: inherit
