--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       RESOURCE_GROUP_NAME: ${{ steps.check_create_rg.outputs.RESOURCE_GROUP_NAME }}
       WEBAPP_URL: ${{ steps.get_output.outputs.WEBAPP_URL }}
       DEPLOYMENT_SUCCESS: ${{ steps.deployment_status.outputs.SUCCESS }}
-      API_APP_URL: ${{ steps.get_output.outputs.API_APP_URL }}
+      API_APP_URL: ${{ steps.get_output.outputs.CONTAINER_APP_URL }}
       CONTAINER_APP: ${{steps.get_backend_url.outputs.CONTAINER_APP_URL}}
     steps:
       - name: Checkout Code
@@ -91,7 +91,7 @@ jobs:
           ACCL_NAME="macae"  # Account name as specified
           SHORT_UUID=$(uuidgen | cut -d'-' -f1)
           UNIQUE_RG_NAME="arg-${ACCL_NAME}-${SHORT_UUID}"
-          echo "RESOURCE_GROUP_NAME=${UNIQUE_RG_NAME}" >> $GITHUB_ENV
+          echo "RESOURCE_GROUP_NAME=${UNIQUE_RG_NAME}" >> $GITHUB_OUTPUT
           echo "Generated Resource_GROUP_PREFIX: ${UNIQUE_RG_NAME}"
 
       - name: Check and Create Resource Group
@@ -190,7 +190,7 @@ jobs:
           fi
 
           echo "✅ Backend Container App URL: https://${CONTAINER_APP_URL}"
-          echo "BACKEND_API_URL=https://${CONTAINER_APP_URL}" >> $GITHUB_ENV
+          echo "CONTAINER_APP_URL=https://${CONTAINER_APP_URL}" >> $GITHUB_OUTPUT
 
       - name: Extract AI Services and Key Vault Names
         if: always()
@@ -230,7 +230,7 @@ jobs:
     uses: ./.github/workflows/test-automation.yml
     with:
       MACAE_WEB_URL: ${{ needs.deploy.outputs.WEBAPP_URL }}
-      MACAE_URL_API: ${{ needs.deploy.outputs.API_APP_URL }}
+      MACAE_URL_API: ${{ needs.deploy.outputs.CONTAINER_APP_URL }}
       MACAE_RG: ${{needs.deploy.outputs.RESOURCE_GROUP_NAME}}
       MACAE_CONTAINER_APP: ${{needs.deploy.outputs.CONTAINER_APP_URL}}
 
