--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
       WEBAPP_URL: ${{ steps.get_output.outputs.WEBAPP_URL }}
       DEPLOYMENT_SUCCESS: ${{ steps.deployment_status.outputs.SUCCESS }}
       API_APP_URL: ${{ steps.get_output.outputs.CONTAINER_APP_URL }}
-      CONTAINER_APP: ${{steps.get_backend_url.outputs.CONTAINER_APP_URL}}
+      CONTAINER_APP: ${{steps.get_backend_url.outputs.CONTAINER_APP}}
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -156,10 +156,6 @@ jobs:
               WEBAPP_URL="https://${NAME}.azurewebsites.net"
               echo "WEBAPP_URL=$WEBAPP_URL" >> $GITHUB_OUTPUT
               echo "WEBAPP_URL=$WEBAPP_URL" 
-            elif [[ $NAME == api-* ]]; then
-              API_APP_URL="https://${NAME}.azurewebsites.net"
-              echo "API_APP_URL=$API_APP_URL" >> $GITHUB_OUTPUT
-              echo "API_APP_URL=$API_APP_URL"
             fi
           done
 
@@ -191,6 +187,7 @@ jobs:
 
           echo "✅ Backend Container App URL: https://${CONTAINER_APP_URL}"
           echo "CONTAINER_APP_URL=https://${CONTAINER_APP_URL}" >> $GITHUB_OUTPUT
+          echo "CONTAINER_APP_NAME=${CONTAINER_APP_NAME}" >> $GITHUB_OUTPUT
 
       - name: Extract AI Services and Key Vault Names
         if: always()
@@ -232,7 +229,7 @@ jobs:
       MACAE_WEB_URL: ${{ needs.deploy.outputs.WEBAPP_URL }}
       MACAE_URL_API: ${{ needs.deploy.outputs.CONTAINER_APP_URL }}
       MACAE_RG: ${{needs.deploy.outputs.RESOURCE_GROUP_NAME}}
-      MACAE_CONTAINER_APP: ${{needs.deploy.outputs.CONTAINER_APP_URL}}
+      MACAE_CONTAINER_APP: ${{needs.deploy.outputs.CONTAINER_APP}}
 
     secrets: inherit
   cleanup-deployment:
