--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -87,8 +87,7 @@ jobs:
       - name: Generate Resource Group Name
         id: generate_rg_name
         run: |
-          echo "Generating a unique resource group name..."
-          ACCL_NAME="macae"  # Account name as specified
+          ACCL_NAME="macae"
           SHORT_UUID=$(uuidgen | cut -d'-' -f1)
           UNIQUE_RG_NAME="arg-${ACCL_NAME}-${SHORT_UUID}"
           echo "RESOURCE_GROUP_NAME=${UNIQUE_RG_NAME}" >> $GITHUB_ENV
@@ -97,32 +96,25 @@ jobs:
       - name: Check and Create Resource Group
         id: check_create_rg
         run: |
-          set -e  
-          echo "Checking if resource group exists..."
+          set -e
           rg_exists=$(az group exists --name ${{ env.RESOURCE_GROUP_NAME }})
           if [ "$rg_exists" = "false" ]; then
-            echo "Resource group does not exist. Creating..."
-            az group create --name ${{ env.RESOURCE_GROUP_NAME }} --location ${{ env.AZURE_LOCATION }} || { echo "Error creating resource group"; exit 1; }
-          else
-            echo "Resource group already exists."
+            az group create --name ${{ env.RESOURCE_GROUP_NAME }} --location ${{ env.AZURE_LOCATION }}
           fi
+          echo "RESOURCE_GROUP_NAME=${{ env.RESOURCE_GROUP_NAME }}" >> $GITHUB_OUTPUT
 
       - name: Generate Unique Solution Prefix
         id: generate_solution_prefix
         run: |
-          set -e
           COMMON_PART="macae"
-          TIMESTAMP=$(date +%s)  
-          UPDATED_TIMESTAMP=$(echo $TIMESTAMP | tail -c 6) 
+          TIMESTAMP=$(date +%s)
+          UPDATED_TIMESTAMP=$(echo $TIMESTAMP | tail -c 6)
           UNIQUE_SOLUTION_PREFIX="${COMMON_PART}${UPDATED_TIMESTAMP}"
           echo "SOLUTION_PREFIX=${UNIQUE_SOLUTION_PREFIX}" >> $GITHUB_ENV
-          echo "Generated SOLUTION_PREFIX: ${UNIQUE_SOLUTION_PREFIX}"
 
       - name: Deploy Bicep Template
         id: deploy
         run: |
-          set -e
-          # set image tag based on branch
           if [[ "${{ env.BRANCH_NAME }}" == "main" ]]; then
             IMAGE_TAG="latest"
           elif [[ "${{ env.BRANCH_NAME }}" == "hotfix" ]]; then
@@ -135,59 +127,40 @@ jobs:
             --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
             --template-file infra/main.bicep \
             --parameters \
-                solutionPrefix=${{env.SOLUTION_PREFIX}} \
-                solutionLocation="${{env.AZURE_LOCATION}}" \
-                azureOpenAILocation="${{env.AZURE_LOCATION}}" \
-                modelDeploymentType="GlobalStandard" \
-                gptModelName="gpt-4o" \
-                gptModelVersion="2024-08-06" \
-                imageTag="${IMAGE_TAG}" \
-              --output json
+              solutionPrefix=${{ env.SOLUTION_PREFIX }} \
+              solutionLocation="${{ env.AZURE_LOCATION }}" \
+              azureOpenAILocation="${{ env.AZURE_LOCATION }}" \
+              modelDeploymentType="GlobalStandard" \
+              gptModelName="gpt-4o" \
+              gptModelVersion="2024-08-06" \
+              imageTag="${IMAGE_TAG}" \
+            --output json
 
       - name: Extract Web App and API App URLs
-        id: get_output # <-- Add this
+        id: get_output
         run: |
-          echo "Fetching Web Apps..."
-
           WEBAPP_NAMES=$(az webapp list --resource-group ${{ env.RESOURCE_GROUP_NAME }} --query "[].name" -o tsv)
-          echo "Detected Web Apps: $WEBAPP_NAMES"
           for NAME in $WEBAPP_NAMES; do
             if [[ $NAME == app-* ]]; then
               WEBAPP_URL="https://${NAME}.azurewebsites.net"
               echo "WEBAPP_URL=$WEBAPP_URL" >> $GITHUB_OUTPUT
-              echo "WEBAPP_URL=$WEBAPP_URL" 
             fi
           done
 
       - name: Get Container App Backend URL
         id: get_backend_url
         run: |
-          set -e
-          echo "Fetching backend Container App URL from resource group: ${{ env.RESOURCE_GROUP_NAME }}"
-
           CONTAINER_APP_NAME=$(az containerapp list \
-          --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
-          --query "[0].name" -o tsv)
-
-          if [ -z "$CONTAINER_APP_NAME" ]; then
-          echo "❌ No container app found in resource group."
-          exit 1
-          fi
-
+            --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
+            --query "[0].name" -o tsv)
 
           CONTAINER_APP_URL=$(az containerapp show \
-          --name "$CONTAINER_APP_NAME" \
-          --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
-          --query "properties.configuration.ingress.fqdn" -o tsv)
+            --name "$CONTAINER_APP_NAME" \
+            --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
+            --query "properties.configuration.ingress.fqdn" -o tsv)
 
-          if [ -z "$CONTAINER_APP_URL" ]; then
-          echo "❌ Failed to retrieve the backend container app URL."
-          exit 1
-          fi
-
-          echo "✅ Backend Container App URL: https://${CONTAINER_APP_URL}"
           echo "CONTAINER_APP_URL=https://${CONTAINER_APP_URL}" >> $GITHUB_OUTPUT
-          echo "CONTAINER_APP_NAME=${CONTAINER_APP_NAME}" >> $GITHUB_OUTPUT
+          echo "CONTAINER_APP=${CONTAINER_APP_NAME}" >> $GITHUB_OUTPUT
 
       - name: Extract AI Services and Key Vault Names
         if: always()
@@ -227,10 +200,9 @@ jobs:
     uses: ./.github/workflows/test-automation.yml
     with:
       MACAE_WEB_URL: ${{ needs.deploy.outputs.WEBAPP_URL }}
-      MACAE_URL_API: ${{ needs.deploy.outputs.CONTAINER_APP_URL }}
-      MACAE_RG: ${{needs.deploy.outputs.RESOURCE_GROUP_NAME}}
-      MACAE_CONTAINER_APP: ${{needs.deploy.outputs.CONTAINER_APP}}
-
+      MACAE_URL_API: ${{ needs.deploy.outputs.API_APP_URL }}
+      MACAE_RG: ${{ needs.deploy.outputs.RESOURCE_GROUP_NAME }}
+      MACAE_CONTAINER_APP: ${{ needs.deploy.outputs.CONTAINER_APP }}
     secrets: inherit
   cleanup-deployment:
     if: always() && needs.deploy.outputs.RESOURCE_GROUP_NAME != ''
