--- a/.github/workflows/test-automation.yml
+++ b/.github/workflows/test-automation.yml
@@ -1,15 +1,6 @@
 name: Test Automation MACAE
 
 on:
-  push:
-    branches:
-      - main
-      - dev
-      - hotfix
-    paths:
-      - "tests/e2e-test/**"
-  schedule:
-    - cron: "0 13 * * *"
   workflow_dispatch:
   workflow_call:
     inputs:
@@ -56,12 +47,12 @@ jobs:
         with:
           creds: '{"clientId":"${{ secrets.AZURE_CLIENT_ID }}","clientSecret":"${{ secrets.AZURE_CLIENT_SECRET }}","subscriptionId":"${{ secrets.AZURE_SUBSCRIPTION_ID }}","tenantId":"${{ secrets.AZURE_TENANT_ID }}"}'
 
-      - name: Start Container App
-        uses: azure/cli@v2
-        with:
-          azcliversion: "latest"
-          inlineScript: |
-            az rest -m post -u "/subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/${{ env.MACAE_RG }}/providers/Microsoft.App/containerApps/${{ env.MACAE_CONTAINER_APP }}/start?api-version=2025-01-01"
+      # - name: Start Container App
+      #   uses: azure/cli@v2
+      #   with:
+      #     azcliversion: "latest"
+      #     inlineScript: |
+      #       az rest -m post -u "/subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/${{ env.MACAE_RG }}/providers/Microsoft.App/containerApps/${{ env.MACAE_CONTAINER_APP }}/start?api-version=2025-01-01"
 
       - name: Install dependencies
         run: |
@@ -188,11 +179,11 @@ jobs:
             -H "Content-Type: application/json" \
             -d "$EMAIL_BODY" || echo "Failed to send notification"
 
-      - name: Stop Container App
-        if: always()
-        uses: azure/cli@v2
-        with:
-          azcliversion: "latest"
-          inlineScript: |
-            az rest -m post -u "/subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/${{ env.MACAE_RG }}/providers/Microsoft.App/containerApps/${{ env.MACAE_CONTAINER_APP }}/stop?api-version=2025-01-01"
-            az logout
+      # - name: Stop Container App
+      #   if: always()
+      #   uses: azure/cli@v2
+      #   with:
+      #     azcliversion: "latest"
+      #     inlineScript: |
+      #       az rest -m post -u "/subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/${{ env.MACAE_RG }}/providers/Microsoft.App/containerApps/${{ env.MACAE_CONTAINER_APP }}/stop?api-version=2025-01-01"
+      #       az logout
