--- a/.github/workflows/deploy-waf.yml
+++ b/.github/workflows/deploy-waf.yml
@@ -4,9 +4,9 @@ on:
   push:
     branches:
       - main
+      - psl-telemetryerrorfix
   schedule:
     - cron: "0 11,23 * * *" # Runs at 11:00 AM and 11:00 PM GMT
-  workflow_dispatch: #Allow manual triggering
 
 jobs:
   deploy:
